Fix uploader, add api/v2/events/:id endpoint
